Project TimeSprinter {
  database_type: 'PostgreSQL'
  Note: 'Web app for organizing free time and tasks'
}

Table user {
  id int [pk]
  username varchar
  email varchar
  password varchar
  role enum
  teams in [ref: <> team.id]
  activities in [ref: > leisure_activities.id]
  tasks in [ref: > task.id]
}

Table site_admins {
  id int [pk]
  users in [ref: > user.id]
}

Table team {
  id int [pk]
  name varchar
  description varchar
  members in [ref: <> user.id]
  admins in [ref: <> user.id]
  projects in [ref: > project.id]
}

Table leisure_activities {
  id int [pk]
  name varchar
  description varchar
  start_date datetime
  end_date datetime
}

Table project {
  id int [pk]
  name varchar
  description varchar
  start_date datetime
  end_date datetime
  tasks in [ref: > task.id]
}

Table task {
  id int [pk]
  name varchar
  description varchar
  urgency boolean
  importance boolean
  start_date datetime
  end_date datetime
}
